# cg-opengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Context.h  Engine.h  EntityManager.h  IndexBuffer.h  LightManager.h  RenderableManager.h  Renderer.h  Scene.h  Shader.h  Skybox.h  Texture.h  TransformManager.h  VertexBuffer.h  View.h
include/drawable/: Aura.h  Color.h  Cone.h  Contour.h  Cube.h  Cylinder.h  Drawable.h  Frustum.h  Material.h  Mesh.h  Orbit.h  Pyramid.h  Ring.h  Sphere.h  Sun.h  Tetrahedron.h  Trace.h
include/utils/: ContourTracer.h  DescentIterator.h  DescentTracer.h  MediaExporter.h  SgdIterator.h  SolarSystem.h  StarGenerator.h  TextureLoader.h
res/shaders/: phong.frag  phong.vert  unlit.frag  unlit.vert
src/: Camera.cpp  Context.cpp  Engine.cpp  EntityManager.cpp  IndexBuffer.cpp  LightManager.cpp  RenderableManager.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  TransformManager.cpp  VertexBuffer.cpp  View.cpp
src/drawable/: Aura.cpp  Color.cpp  Cone.cpp  Contour.cpp  Cube.cpp  Cylinder.cpp  Drawable.cpp  Frustum.cpp  Mesh.cpp  Orbit.cpp  Pyramid.cpp  Ring.cpp  Sphere.cpp  Sun.cpp  Tetrahedron.cpp  Trace.cpp
src/utils/: ContourTracer.cpp  DescentIterator.cpp  DescentTracer.cpp  MediaExporter.cpp  SgdIterator.cpp  SolarSystem.cpp  StarGenerator.cpp  TextureLoader.cpp
